# 1up

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  RELEASE.md  justfile  lefthook.yml  release-please-config.json  update-manifest.json
.cargo/: audit.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  pr-title.yml  publish-packages.yml  release-assets.yml  release-evidence.yml  release-please.yml
.lefthook/: protect-main.sh
.rp1/: project_id
.rp1/context/: architecture.md  charter.md  concept_map.md  index.md  interaction-model.md  modules.md  patterns.md  state.json
.rp1/work/features/rewrite-sql/: field-notes.md  tasks.md  validation-artifacts.md
.rp1/work/features/v1/: field-notes.md  tasks.md
benches/: search_bench.rs
docs/: mcp-installation.md
docs/verification/: update-cli-run.md
evals/: README.md  biome.json  bunfig.toml  package.json  run-parallel.sh  summary.sh  tsconfig.json
evals/results/: 2026-04-16-sonnet-v0.1.7.md  2026-04-19-sonnet-lean-cli.md
evals/suites/1up-impact/: evals.yaml  prompt-1up.txt  prompt-baseline.txt
evals/suites/1up-search/: evals.yaml  portable-self-eval-orchestrator.md  prompt-1up.txt  prompt-baseline.txt  prompt.txt  recall-baseline.json  recall-corpus.hash-based.jsonl  recall-corpus.jsonl  recall-corpus.v11-biased.jsonl  recall-results.json  recall.ts  search-bench.ts
evals/suites/shared/: extension.ts  tool-names.ts
evals/suites/shared/assertions/: index.test.ts  index.ts
packaging/homebrew/: 1up.rb.tmpl
packaging/scoop/: 1up.json.tmpl
scripts/: approve_impact_rollout.sh  benchmark_builderbot.sh  benchmark_emdash.sh  benchmark_impact.sh  benchmark_parallel_indexing.sh  benchmark_rewrite_sql.sh  benchmark_vector_index_size.sh  evaluate_impact_trust.sh  security_check.sh
scripts/baselines/: vector_index_size_baseline.json
scripts/install/: setup.sh
scripts/lib/: impact_fixture.sh
scripts/release/: check_license_consistency.sh  common.sh  download_retained_security_check.sh  extract_release_notes.sh  generate_release_evidence.sh  generate_release_manifest.sh  package_release_asset.sh  record_mcp_host_smoke.sh  render_homebrew_formula.sh  render_scoop_manifest.sh  validate_release_metadata.sh  verify_mcp_smoke.sh  verify_release_archives.sh  write_package_publication_record.sh  write_sha256sums.sh
skills/1up-search/: SKILL.md
src/: lib.rs  main.rs  reminder.md
src/cli/: add_mcp.rs  context.rs  discovery_output.rs  get.rs  hello_agent.rs  impact.rs  index.rs  init.rs  lean.rs  list.rs  mcp.rs  mod.rs  output.rs  project_status_files.rs  reindex.rs  search.rs  start.rs  status.rs  stop.rs  structural.rs  symbol.rs  update.rs
src/daemon/: ipc.rs  lifecycle.rs  lifecycle_stub.rs  mod.rs  registry.rs  search_service.rs  search_service_stub.rs  watcher.rs  worker.rs  worker_stub.rs
src/indexer/: chunker.rs  embedder.rs  mod.rs  parser.rs  pipeline.rs  scanner.rs
src/mcp/: mod.rs  ops.rs  server.rs  tools.rs  types.rs
src/search/: context.rs  formatter.rs  hybrid.rs  impact.rs  intent.rs  mod.rs  ranking.rs  retrieval.rs  scope.rs  structural.rs  symbol.rs
src/shared/: config.rs  constants.rs  errors.rs  fs.rs  mod.rs  progress.rs  project.rs  reminder.rs  symbols.rs  types.rs  update.rs
src/storage/: db.rs  mod.rs  queries.rs  relations.rs  schema.rs  segments.rs
tests/: cli_tests.rs  impact_rollout_tests.rs  integration_tests.rs  license_consistency_tests.rs  release_assets_tests.rs  rewrite_sql_verification.rs  security_check_tests.rs  setup_script_tests.rs
