[package]
name = "oneup"
version = "0.1.0"
edition = "2021"
description = "Unified search substrate for source repositories"
license = "MIT"
default-run = "1up"

[[bin]]
name = "1up"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Database
libsql = "0.6"

# Tree-sitter (core + language grammars)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-language = "0.1"

# ONNX inference
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

# Tokenizer
tokenizers = "0.21"

# File watching
notify = "7"

# File scanning (.gitignore-aware)
ignore = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP (model download)
reqwest = { version = "0.12", features = ["stream"] }

# Async stream utilities
futures-util = "0.3"

# Hashing
sha2 = "0.10"

# Terminal colors
colored = "2"

# UUID
uuid = { version = "1", features = ["v4"] }

# XDG paths
dirs = "6"

# Progress bars
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unix process/signal management
nix = { version = "0.29", features = ["signal", "process"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = "0.5"
tempfile = "3"
libc = "0.2"
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "search_bench"
harness = false
