[package]
name = "oneup"
version = "0.1.0"
edition = "2021"
description = "Unified search substrate for source repositories"
license = "MIT"
default-run = "1up"

[[bin]]
name = "1up"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Database
turso = "0.6.0-pre.14"
turso_core = { version = "0.6.0-pre.14", features = ["fts"] }

# Tree-sitter (core + language grammars)
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-md = "0.5"
tree-sitter-language = "0.1"

# Streaming iterator (for tree-sitter query iteration)
streaming-iterator = "0.1"

# ONNX inference
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

# Tokenizer
tokenizers = "0.22"

# File watching
notify = "7"

# File scanning (.gitignore-aware)
ignore = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP (model download)
reqwest = { version = "0.13", features = ["stream"] }

# Async stream utilities
futures-util = "0.3"

# Hashing
sha2 = "0.11"

# Terminal colors
colored = "3"

# UUID
uuid = { version = "1", features = ["v4"] }

# XDG paths
dirs = "6"

# Terminal UI
nanospinner = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unix process/signal management
nix = { version = "0.31", features = ["signal", "process"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = "0.8"
tempfile = "3"
libc = "0.2"
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "search_bench"
harness = false

# Patch turso to use async_io=false for local databases.
# The upstream Rust SDK hardcodes async_io=true (needed only for cloud sync),
# which adds ~30ms overhead per SQL statement via async poll machinery.
# Other language bindings (Python, Go) already use async_io=false for local.
[patch.crates-io]
turso = { path = "vendor/turso-patched" }
